Fixed issue where not all markers will be seen sometime on mobile.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -267,8 +267,7 @@
   font-size: 1.0rem;
 }
 .map-infowindow-img {
-  width: 350px;
-  max-height: 300px;
+  height: 25vh;
 }
 
 .list-item-image {
